implement SubstringComparison