@@ -1,20 +1,18 @@
 package com.example.demo;
 
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
 // https://www.hackerrank.com/challenges/java-string-compare/problem
+// In this task UI did not allow me to change imports. Fully qualified collections are must
 class SubstringComparison {
     public static String getSmallestAndLargest(String s, int k) {
-        List<Character> uniqueChars = s.codePoints().distinct()
+        java.util.List<Character> uniqueChars = s.codePoints()
+                .distinct()
                 .mapToObj(c -> (char) c)
                 .sorted()
-                .collect(Collectors.toList());
+                .collect(java.util.stream.Collectors.toList());
 
-        List<String> substrings = IntStream.range(0, s.toCharArray().length - k + 1)
+        java.util.List<String> substrings = java.util.stream.IntStream.range(0, s.toCharArray().length - k + 1)
                 .mapToObj(i -> s.substring(i, i + k))
-                .collect(Collectors.toList());
+                .collect(java.util.stream.Collectors.toList());
 
         String smallest = findSmallest(substrings, uniqueChars, 0);
         String largest = findLargest(substrings, uniqueChars, uniqueChars.size() - 1);
@@ -22,25 +20,25 @@ class SubstringComparison {
         return smallest + "\n" + largest;
     }
 
-    private static String findSmallest(List<String> substrings, List<Character> uniqueChars, int index) {
-        List<String> candidates = findCandidates(substrings, uniqueChars, index);
+    private static String findSmallest(java.util.List<String> substrings, java.util.List<Character> uniqueChars, int index) {
+        java.util.List<String> candidates = findCandidates(substrings, uniqueChars, index);
         return candidates.isEmpty()
                 ? findSmallest(substrings, uniqueChars, index + 1)
-                : candidates.getFirst();
+                : candidates.get(0);
     }
 
-    private static String findLargest(List<String> substrings, List<Character> uniqueChars, int index) {
-        List<String> candidates = findCandidates(substrings, uniqueChars, index);
+    private static String findLargest(java.util.List<String> substrings, java.util.List<Character> uniqueChars, int index) {
+        java.util.List<String> candidates = findCandidates(substrings, uniqueChars, index);
         return candidates.isEmpty()
                 ? findLargest(substrings, uniqueChars, index - 1)
-                : candidates.getLast();
+                : candidates.get(candidates.size() - 1);
     }
 
-    private static List<String> findCandidates(List<String> substrings, List<Character> uniqueChars, int index) {
+    private static java.util.List<String> findCandidates(java.util.List<String> substrings, java.util.List<Character> uniqueChars, int index) {
         char c = uniqueChars.get(index);
         return substrings.stream()
                 .filter(s -> s.startsWith(String.valueOf(c)))
                 .sorted()
-                .collect(Collectors.toList());
+                .collect(java.util.stream.Collectors.toList());
     }
 }
